--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,6 @@ web:
   container_name: floko
   ports:
     - "1234:5050"
+  environment:
+    - flask_port=$FLASK-PORT
+    - flask_host=$FLASK-HOST
