--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ web:
   ports:
     - "1234:5050"
   environment:
-    - flask_port=$FLASK-PORT
-    - flask_host=$FLASK-HOST
+    - flask_port=$FLASKPORT
+    - flask_host=$FLASKHOST
