--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 Werkzeug==2.0.3
-SQLAlchemy==1.4.42
+flask-sqlalchemy==3.0.2
 psycopg2-binary==2.9.4
